vendor/ruby/3.0.0/extensions/x86_64-linux/3.0.0/mysql2-0.3.21/gem_make.out
current directory: /home/jesusesenhor/Documentos/RUBY/app/vendor/ruby/3.0.0/gems/mysql2-0.3.21/ext/mysql2
/usr/bin/ruby3.0 -I /usr/lib/ruby/vendor_ruby -r ./siteconf20221110-117234-pu0d83.rb extconf.rb
checking for ruby/thread.h... yes
checking for rb_thread_call_without_gvl() in ruby/thread.h... yes
checking for rb_thread_blocking_region()... no
checking for rb_wait_for_single_fd()... yes
checking for rb_hash_dup()... yes
checking for rb_intern3()... yes
-----
Using mysql_config at /usr/bin/mysql_config
-----
checking for mysql.h... yes
checking for errmsg.h... yes
checking for mysqld_error.h... yes
-----
Setting rpath to /usr/lib/x86_64-linux-gnu
-----
creating Makefile

current directory: /home/jesusesenhor/Documentos/RUBY/app/vendor/ruby/3.0.0/gems/mysql2-0.3.21/ext/mysql2
make DESTDIR\= clean

current directory: /home/jesusesenhor/Documentos/RUBY/app/vendor/ruby/3.0.0/gems/mysql2-0.3.21/ext/mysql2
make DESTDIR\=
compiling client.c
client.c: In function ‘nogvl_read_query_result’:
client.c:439:3: error: unknown type name ‘my_bool’; did you mean ‘_Bool’?
  439 |   my_bool res = mysql_read_query_result(client);
      |   ^~~~~~~
      |   _Bool
client.c: In function ‘rb_query’:
client.c:687:14: warning: passing argument 1 of ‘rb_rescue2’ from incompatible pointer type [-Wincompatible-pointer-types]
  687 |   rb_rescue2(do_send_query, (VALUE)&args, disconnect_and_raise, self, rb_eException, (VALUE)0);
      |              ^~~~~~~~~~~~~
      |              |
      |              VALUE (*)(void *) {aka long unsigned int (*)(void *)}
In file included from /usr/include/ruby-3.0.0/ruby/ruby.h:38,
                 from /usr/include/ruby-3.0.0/ruby.h:38,
                 from ./mysql2_ext.h:8,
                 from client.c:1:
/usr/include/ruby-3.0.0/ruby/internal/iterator.h:51:18: note: expected ‘VALUE (*)(VALUE)’ {aka ‘long unsigned int (*)(long unsigned int)’} but argument is of type ‘VALUE (*)(void *)’ {aka ‘long unsigned int (*)(void *)’}
   51 | VALUE rb_rescue2(VALUE(*)(VALUE),VALUE,VALUE(*)(VALUE,VALUE),VALUE,...);
      |                  ^~~~~~~~~~~~~~~
client.c:695:16: warning: passing argument 1 of ‘rb_rescue2’ from incompatible pointer type [-Wincompatible-pointer-types]
  695 |     rb_rescue2(do_query, (VALUE)&async_args, disconnect_and_raise, self, rb_eException, (VALUE)0);
      |                ^~~~~~~~
      |                |
      |                VALUE (*)(void *) {aka long unsigned int (*)(void *)}
In file included from /usr/include/ruby-3.0.0/ruby/ruby.h:38,
                 from /usr/include/ruby-3.0.0/ruby.h:38,
                 from ./mysql2_ext.h:8,
                 from client.c:1:
/usr/include/ruby-3.0.0/ruby/internal/iterator.h:51:18: note: expected ‘VALUE (*)(VALUE)’ {aka ‘long unsigned int (*)(long unsigned int)’} but argument is of type ‘VALUE (*)(void *)’ {aka ‘long unsigned int (*)(void *)’}
   51 | VALUE rb_rescue2(VALUE(*)(VALUE),VALUE,VALUE(*)(VALUE,VALUE),VALUE,...);
      |                  ^~~~~~~~~~~~~~~
client.c: In function ‘_mysql_client_options’:
client.c:762:3: error: unknown type name ‘my_bool’; did you mean ‘_Bool’?
  762 |   my_bool boolval;
      |   ^~~~~~~
      |   _Bool
client.c:797:10: error: ‘MYSQL_SECURE_AUTH’ undeclared (first use in this function); did you mean ‘MYSQL_DEFAULT_AUTH’?
  797 |     case MYSQL_SECURE_AUTH:
      |          ^~~~~~~~~~~~~~~~~
      |          MYSQL_DEFAULT_AUTH
client.c:797:10: note: each undeclared identifier is reported only once for each function it appears in
client.c: In function ‘set_secure_auth’:
client.c:1185:38: error: ‘MYSQL_SECURE_AUTH’ undeclared (first use in this function); did you mean ‘MYSQL_DEFAULT_AUTH’?
 1185 |   return _mysql_client_options(self, MYSQL_SECURE_AUTH, value);
      |                                      ^~~~~~~~~~~~~~~~~
      |                                      MYSQL_DEFAULT_AUTH
client.c:1186:1: warning: control reaches end of non-void function [-Wreturn-type]
 1186 | }
      | ^
make: *** [Makefile:245: client.o] Erro 1

make failed, exit code 2
